objects/MDPERSONATOR__MD_MatchUpJob__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__JobID__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>JobID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__JobStatus__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>JobStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PercentComplete__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PercentComplete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RetrieveStatus__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>RetrieveStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TokenID__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>TokenID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MD_MatchUpJob</label>
    <nameField>
        <label>MD_MatchUpJob Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_MatchUpJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>